yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gekube-deployment
  labels:
    app: gekube
spec:
  replicas: 1
  template:
    metadata:
      name: gekube
      labels:
        app: gekube
    spec:
      containers:
      - name: gekube
        image: gitexpress:3a136625b42af1a6d0af9168e506b3ee7f375c62
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: gekube


---

apiVersion: v1
kind: Service
metadata:
  name: gekube-service
spec:
  selector:
    app: gekube
  ports:
    - port: 8080
  type: NodePort
